# 2048-classic-game-221734-221743

./: README.md
.init/: .init-build-cmd  .init-generate-openapi  .init-install-dependencies  .init-run-tool  .init-test-tool  .linter.sh
.knowledge/: .knowledge.json  README.md.json  native_2048_app_include_GameController.h.json  native_2048_app_include_GameModel.h.json  native_2048_app_include_GameView.h.json  native_2048_app_include_GridWidget.h.json  native_2048_app_include_ScorePanel.h.json  native_2048_app_include_Theme.h.json  native_2048_app_include_TileWidget.h.json  native_2048_app_include_mainApp.h.json  native_2048_app_src_GameController.cpp.json  native_2048_app_src_GameModel.cpp.json  native_2048_app_src_GameView.cpp.json  native_2048_app_src_GridWidget.cpp.json  native_2048_app_src_ScorePanel.cpp.json  native_2048_app_src_Theme.cpp.json  native_2048_app_src_TileWidget.cpp.json  native_2048_app_src_mainApp.cpp.json
.knowledge/.vector_db/: milvus.db
native_2048_app/: CMakeLists.txt
native_2048_app/.init/: .init-install-dependencies
native_2048_app/include/: GameController.h  GameModel.h  GameView.h  GridWidget.h  ScorePanel.h  Theme.h  TileWidget.h  mainApp.h
native_2048_app/src/: GameController.cpp  GameModel.cpp  GameView.cpp  GridWidget.cpp  ScorePanel.cpp  Theme.cpp  TileWidget.cpp  mainApp.cpp
