cmake_minimum_required(VERSION 3.16)
project(MainApp VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

set(SOURCES
    src/mainApp.cpp
    src/Theme.cpp
    src/GameModel.cpp
    src/GameController.cpp
    src/ScorePanel.cpp
    src/TileWidget.cpp
    src/GridWidget.cpp
    src/GameView.cpp
)

set(HEADERS
    include/mainApp.h
    include/Theme.h
    include/GameModel.h
    include/GameController.h
    include/ScorePanel.h
    include/TileWidget.h
    include/GridWidget.h
    include/GameView.h
)

add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})

target_link_libraries(${PROJECT_NAME} Qt6::Core Qt6::Widgets Qt6::Gui)

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
)

# This allows easy startup of the project without the caller knowing the name of
# the project.
# This must be kept in place.
add_custom_target(run
    COMMAND $<TARGET_FILE:${PROJECT_NAME}>
    DEPENDS ${PROJECT_NAME}
    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
    COMMENT "Running ${PROJECT_NAME}"
)

enable_testing()

add_test(NAME ${PROJECT_NAME}Test COMMAND ${PROJECT_NAME})
